--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -1663,6 +1663,7 @@ msgstr ""
 
 #: deviations/templates/deviations/add_dl.html
 #: deviations/templates/deviations/override_dl.html
+#: exercise/templates/exercise/staff/_deviationslink.html
 msgid "ADD_DEADLINE_DEVIATIONS"
 msgstr "Lisää määräaikojen poikkeamia"
 
@@ -5409,6 +5410,16 @@ msgstr ""
 #: shibboleth_login/views.py
 msgid "SHIBBOLETH_ERROR_USER_ACCOUNT_DISABLED"
 msgstr "Käyttäjätili on poistettu käytöstä."
+
+#: templates/403.html
+msgid "ACCESS_RESTRICTED_403"
+msgstr "Pääsy kielletty"
+
+#: templates/403.html
+msgid "ACCESS_RESTRICTED_403_INFO"
+msgstr ""
+"Sinulla ei ole tarvittavia oikeuksia nähdäksesi tätä sisältöä. Muistathan "
+"kirjautua sisään, jos sinulla on Aalto-käyttäjätunnus."
 
 #: templates/404.html
 msgid "PAGE_NOT_AVAILABLE_IN_LANGUAGE"
