--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-08-28 12:16+0300\n"
+"POT-Creation-Date: 2023-08-31 15:24+0300\n"
 "PO-Revision-Date: 2021-05-27 14:47+0300\n"
 "Last-Translator: Jimmy Ihalainen <jimmy.ihalainen@aalto.fi>\n"
 "Language-Team: English<>\n"
@@ -2346,6 +2346,10 @@ msgid "REVEAL_RULE_ERROR_INVALID_JSON -- {key}"
 msgstr ""
 "Invalid reveal rule definition '{key}'. Must be a JSON object with a "
 "'trigger' field."
+
+#: edit_course/operations/configure.py
+msgid "ERROR_MODEL_SOLUTION_CHAPTER_NOT_FOUND -- {value}"
+msgstr "Chapter '{value}' not found."
 
 #: edit_course/operations/configure.py
 msgid "BUILD_LOG_ERROR_URL_BLANK"
