--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-08-28 12:16+0300\n"
+"POT-Creation-Date: 2023-08-31 15:24+0300\n"
 "PO-Revision-Date: 2019-08-14 12:16+0200\n"
 "Last-Translator: Jimmy Ihalainen <jimmy.ihalainen@aalto.fi>\n"
 "Language-Team: Finnish <>\n"
@@ -2360,6 +2360,10 @@ msgid "REVEAL_RULE_ERROR_INVALID_JSON -- {key}"
 msgstr ""
 "Viallinen paljastamissäännön määrittely '{key}'. Täytyy olla JSON-objekti, "
 "jolla on 'trigger'-kenttä."
+
+#: edit_course/operations/configure.py
+msgid "ERROR_MODEL_SOLUTION_CHAPTER_NOT_FOUND -- {value}"
+msgstr "Lukua '{value}' ei löytynyt."
 
 #: edit_course/operations/configure.py
 msgid "BUILD_LOG_ERROR_URL_BLANK"
