Improve the configuration of course module model answer chapter
* Do not crash if the model answer's chapter key is given in an invalid format
  (expected modulekey/chapterkey).
* Require that model answer chapters are in the same course instance
  as the course module.
* Clarify the error message in the module model answer setup.

Related to #1250 and da7054d9125221b0d86d95c6fef8dd468aedebd5.

--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -2355,8 +2355,10 @@ msgstr ""
 
 #: edit_course/operations/configure.py
 #, python-brace-format
-msgid "ERROR_MODEL_SOLUTION_CHAPTER_NOT_FOUND -- {value}"
-msgstr "Chapter '{value}' not found."
+msgid "ERROR_MODEL_SOLUTION_CHAPTER_NOT_FOUND -- {value}, {module}"
+msgstr ""
+"Chapter '{value}' not found when setting the model answer for the course "
+"module '{module}'."
 
 #: edit_course/operations/configure.py
 msgid "BUILD_LOG_ERROR_URL_BLANK"
