--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -267,6 +267,10 @@ msgid "ERROR_GROUP_ALREADY_EXISTS"
 msgstr "Tämä ryhmä on jo olemassa."
 
 #: course/forms.py
+msgid "MUST_HAVE_TWO_MEMBERS"
+msgstr "Ryhmässä tulee olla vähintään kaksi jäsentä"
+
+#: course/forms.py
 msgid "LABEL_USERS"
 msgstr "Käyttäjät"
 
