LTI Tool v1.3: fix crash when the LTI launch has expired from cache

--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-08-31 15:24+0300\n"
+"POT-Creation-Date: 2023-10-27 20:01+0300\n"
 "PO-Revision-Date: 2021-05-27 14:47+0300\n"
 "Last-Translator: Jimmy Ihalainen <jimmy.ihalainen@aalto.fi>\n"
 "Language-Team: English<>\n"
@@ -5305,6 +5305,12 @@ msgstr "Select module"
 #: lti_tool/templates/lti_tool/module_list.html
 msgid "LTI_USE_WHOLE_MODULE"
 msgstr "Use the whole module"
+
+#: lti_tool/views.py
+msgid "LTI_TOOL_ERROR_NO_SESSION_OR_LAUNCH_FOUND"
+msgstr ""
+"No LTI launch or session found. You could try to launch the session again "
+"from the platform."
 
 #: news/forms.py
 msgid "SEND_EMAIL_TO_STUDENTS"
