Clarify messages on module model solution chapter visibility
The messages incorrectly assumed that reveal rules are always
connected to the course module's deadline. There are many
alternative triggers to reveal rules and some of them have
nothing to do with the module deadline.

The message `MODULE_MODEL_ANSWER_VISIBILITY_PERMISSION_DENIED_MSG`
started with the "unfortunately" part that is already included
in the permission class's base message (which is
`EXERCISE_VISIBILITY_PERMISSION_DENIED_MSG`).
Thus, the "unfortunately" part should not be repeated.

--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -3517,9 +3517,7 @@ msgstr "The assignment is only for external users."
 
 #: exercise/permissions.py
 msgid "MODULE_MODEL_ANSWER_VISIBILITY_PERMISSION_DENIED_MSG"
-msgstr ""
-"Unfortunately you are not permitted to view this content, since it contains "
-"model answers to assignments whose deadline has not yet passed."
+msgstr "It contains model answers that have not been published yet."
 
 #: exercise/permissions.py
 msgid "EXERCISE_ASSISTANT_PERMISSION_DENIED_MSG"
@@ -4108,8 +4106,8 @@ msgstr "Inspect"
 #: exercise/templates/exercise/_user_results.html
 msgid "MODULE_MODEL_ANSWER_NOT_VISIBLE"
 msgstr ""
-"This chapter is hidden, since it contains model answers to assignments whose "
-"deadline has not yet passed."
+"This chapter is hidden, since it contains model answers that have not been "
+"published yet."
 
 #: exercise/templates/exercise/_user_toc.html
 #: lti_tool/templates/lti_tool/lti_course.html
