Fix teacher-facing UI message in the inspect view
Fixes #1269

--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -4527,7 +4527,7 @@ msgstr "There is another submission that is marked as final."
 
 #: exercise/templates/exercise/staff/inspect_submission.html
 msgid "NOTE_BETTER_SUBMISSIONS"
-msgstr "There are submissions with better grades submitted by this student."
+msgstr "Another submission determines the grade for this assignment."
 
 #: exercise/templates/exercise/staff/inspect_submission.html
 msgid "NOTE_LATER_SUBMISSIONS"
