--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -4077,6 +4077,7 @@ msgid "OPEN_FOR_READING"
 msgstr "Lukumateriaali avoinna"
 
 #: exercise/templates/exercise/_user_results.html
+#: exercise/templates/exercise/_user_toc.html
 msgid "ASSIGNMENTS_WITH_PERSONAL_DEADLINE_DEVIATION"
 msgstr "Tehtäviä henkilökohtaisella määräaikapidennyksellä"
 
@@ -4724,6 +4725,15 @@ msgstr "Päiväys"
 #: exercise/templates/exercise/submission_plain.html
 msgid "FILES"
 msgstr "Tiedostot"
+
+#: exercise/templatetags/exercise.py
+#, python-brace-format
+msgid "PERSONAL_EXTENDED_DEADLINE_PLURAL -- {count}"
+msgstr ""
+"<span data-toggle=\"tooltip\" title=\"Henkilökohtaiset pidennetyt määräajat: "
+"{count}\"><span class=\"glyphicon glyphicon-time\" aria-hidden=\"true\"></"
+"span><span class=\"sr-only\">Henkilökohtaiset pidennetyt määräajat: {count}</"
+"span></span>"
 
 #: exercise/templatetags/exercise.py
 msgid "LATEST_SUBMISSIONS"
